static/window/styles/core.css
/* ... */
.title-bar__inner {
  display: flex;
  flex: 0 0 auto;
  height: 18px;
  -webkit-app-region: drag; /* Dragging this moves the window */
}
/* Title */
.title-bar__title {
  display: inline;
  flex: 1;
  position: relative;
  top: -2px;
  padding-left: 2px;
  overflow: hidden;
  /* Text */
  font-size: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
}
/* Button Bar */
.title-bar__button-bar {
  height: 22px;
  flex: 0 1 auto;
  display: block;
  float: right;
  position: relative;
  top: -4px;
}
/* Button Bar Buttons */
.title-bar__button-bar__min,
.title-bar__button-bar__max,
.title-bar__button-bar__cross {
  height: 100%;
  width: 28px;
  float: left;
  -webkit-app-region: no-drag;
  /* Pimp */
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.3;
}
.title-bar__button-bar__min:hover,
.title-bar__button-bar__max:hover,
.title-bar__button-bar__cross:hover {
  opacity: 1;
}


/* ------ Header ------ */
.header {
  --header-padding: 0.3em;
  display: inline-flex;
  flex-flow: wrap;
  font-size: 0.75em;
  padding: var(--header-padding);
  padding-bottom: 0.4em;
}
.header__wrap {
  min-height: 2rem;
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
}
.header__wrap--width-restricted {
  max-width: calc(100vw - var(--header-padding));
}
.header__right {
  flex-grow: 1;
}
.header__right > div > :not(:first-child) {
  margin-right: 0.75rem;
}
/* Header Menu */
.header__menu {
  padding: 0.3em 0;
  margin-right: 1em;
  /* Pimp */
  user-select: none;
}
.header__menu__item {
  display: inline-block;
  user-select: none;
}
.header__menu__item__link {
  display: inline-block;
  padding: 0.3em 0.7em;
  border: 1px solid rgba(0,0,0,0);
}
/* Header Search */
.header__search__wrap {
  width: 13rem;
  margin-right: 0.5em;
}
.header__search {
  display: flex;
  padding: 0.075em 0em 0.09em 0.2em;
  overflow: hidden;
}
.header__search__left {
  flex: 1 1 auto;
}
.header__search__right {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 1.5em;
}
.header__search__right__inner {
  width: fit-content;
  display: inline-flex;
  margin: 0 auto;
}
.header__search__icon {
  width: 0.9em;
  height: 0.9em;
}
.header__search__icon.icon--magnifying-glass {
  opacity: 0.4;
}
.header__search__input,
.header__search__input:active {
  font-size: 1em;
  width: 100%;
  background: none;
  border: none;
  outline: none;
}
/* Header Toggle-Sidebar */
.header__toggle-sidebar {
  float: right;
  margin-right: 0.4rem;
}
.header__toggle-sidebar:hover {
  cursor: pointer;
}


/* ------ Footer ------ */
.footer {
  display: inline-flex;
  flex-flow: wrap;
  padding: 0.05rem 0.2rem;
  /* Pimp */
  user-select: none;
}
.footer__wrap {
  padding: 0.025rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.footer__right {
  flex-grow: 1;
}
.footer__right__inner {
  display: flex;
  float: right;
  width: 100%;
  max-width: 22.5em;
  flex-wrap: wrap;
}
/* Game Count */
.footer__game-count {
  font-size: 0.9rem;
  cursor: default;
}
.footer__game-count p {
  display: inline-block;
}
.footer__game-count p:not(:last-child) {
  padding-right: 0.3rem;
}
/* Scale New-Game */
.footer__new-game {
  font-size: 0.8rem;
}
/* Layout Selector */
.footer__layout-selector {
  display: inline-block;
  margin: 0 0.3em;
  font-size: 0.8em;
}
/* Scale Slider */
.footer__scale-slider {
  flex: 1 1 auto;
  min-width: 6em;
}
.footer__scale-slider__inner {
  --slider-size: 1em;
  display: inline-block;
  position: relative;
  height: var(--slider-size);
  cursor: pointer;
}
.footer__scale-slider__icon {
  position: absolute;
  height: 100%;
  top: 50%;
  transform: translateY(-50%);
  font-size: 1.2em;
}
.footer__scale-slider__icon--left {
  left: 0.25rem;
}
.footer__scale-slider__icon--center {
  left: 50%;
  width: 1px;
  height: 60%;
}
.footer__scale-slider__icon--right {
  right: 0.25rem;
}
.footer__scale-slider__input {
  width: 100%;
  height: 100%;
  position: absolute;
}
.footer__scale-percent {
  display: block;
  width: 2.3em;
}
.footer__scale-percent p {
  float: right;
}


/* ------ Home ------ */
.home-page {
  width: 100%;
  height: 100%;
  overflow: auto;
}
.home-page__inner {
  min-width: 40em;
  overflow: visible;
}
/* Logo */
.home-page__logo {
  --size: 5rem;
  margin: 0.5rem auto 1rem;
  /* Keep the mask's aspect ratio */
  width: var(--size);
  height: calc(var(--size) * 0.9);
}
/* HomePage Box */
.home-page__box {
  display: block;
  margin: 0 auto 1em;
  width: 30em;
  line-height: 1.3;
  border: 1px solid;
  user-select: none;
}
.home-page__box-head {
  padding: 0.15rem 0.3rem;
  border-bottom: 1px solid;
  font-weight: bold;
  text-align: left;
}
.home-page__box-body {
  padding: 0.3rem;
  text-align: center;
}
.home-page__box-item {
  display: flex;
  flex-direction: row;
  list-style: none;
}
.home-page__box-item:not(:last-child) {
  margin-bottom: 0.1rem;
}
.home-page__box-item-icon {
  display: flex;
  margin: auto 0.35rem auto 0;
}
/* HomePage Box - Upgrades */
.home-page__box--upgrades b,
.home-page__box--upgrades i {
  display: block;
  text-align: center;
  white-space: pre-line;
}
/* HomePage Box Item - Platforms */
.home-page__box-item--platforms {
  padding: 0 1rem;
  text-align: center;
}
/* HomePage Progress Components */
.home-page__progress-wrapper {
  font-size: 0.8em !important;
  margin: 0 5%;
}
/* Update */
.home-page__update-box {
  text-align: center;
}
/* Random Games */
.home-page__random-games {
  text-align: center;
}
.home-page__random-games__inner {
  display: inline-block;
  margin: 0 auto;
}
.home-page__random-games__title {
  margin: 0.2em 0;
  font-size: 1.2em;
  font-weight: bold;
}
.home-page__random-games__loading {
  display: block;
  text-align: center;
}
.random-games {
  display: flex;
}

/* ------ Page-Not-Found (404) ------ */
.page-not-found {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
/* ... */

